--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <!-- Education -->
             <div class="row">
               <div class="card-deck">
-               <div class="card col-lg-4 col-md-12 bg-light lift">
+               <div class="card col-lg-4 col-md-12 col-sm-12 bg-light lift">
                    <div class="card-body">
                        <h5 class="pt-3 sectitle">Teesside University (UK)</h5>
                        <p class="stitle">B.sc(Hons) in Information Technology</p>
@@ -107,7 +107,7 @@
                        </ul>
                    </div>
                </div>
-               <div class="card col-lg-4 col-md-12 bg-light lift">
+               <div class="card col-lg-4 col-md-12 col-sm-12 bg-light lift">
                   <div class="card-body">
                    <h5 class="pt-3 sectitle">NCC Education</h5>
                    <p class="stitle">Level 5 Diploma in Computing</p>
@@ -123,7 +123,7 @@
                  </ul>
              </div>
          </div>
-         <div class="card col-lg-4 col-md-12 bg-light lift">
+         <div class="card col-lg-4 col-md-12 col-sm-12 bg-light lift">
           <div class="card-body">
            <h5 class="pt-3 sectitle">National Management Degree College</h5>
            <p class="stitle">Diploma in Information Technology</p>
@@ -279,7 +279,7 @@
                 >
             </div>
             <div class="col-lg-4 col-sm-6">
-                <a class="portfolio-box" href="#"
+                <a class="portfolio-box" href="http://coffeeworld.laminpyae.me"
                 ><img class="img-thumbnail" src="assets/img/portfolio/thumbnails/3.png" alt="" />
                 <div class="portfolio-box-caption">
                     <div class="project-category text-white-50">CSS Project</div>
